tests/baselines/reference/parseClassDeclarationInStrictModeByDefaultInES6.errors.txt
tests/cases/conformance/es6/classDeclaration/parseClassDeclarationInStrictModeByDefaultInES6.ts(4,16): error TS1210: Invalid use of 'arguments' because class definition is considered a strict mode code 
tests/cases/conformance/es6/classDeclaration/parseClassDeclarationInStrictModeByDefaultInES6.ts(5,17): error TS1210: Invalid use of 'eval' because class definition is considered a strict mode code 
tests/cases/conformance/es6/classDeclaration/parseClassDeclarationInStrictModeByDefaultInES6.ts(6,9): error TS1100: Invalid use of 'arguments' in strict mode.
tests/cases/conformance/es6/classDeclaration/parseClassDeclarationInStrictModeByDefaultInES6.ts(6,9): error TS2322: Type 'string' is not assignable to type 'IArguments'.
  Property 'callee' is missing in type 'String'.


==== tests/cases/conformance/es6/classDeclaration/parseClassDeclarationInStrictModeByDefaultInES6.ts (4 errors) ====
    class C {
        interface = 10;
        public implements() { }
        public foo(arguments: any) { }
                   ~~~~~~~~~
!!! error TS1210: Invalid use of 'arguments' because class definition is considered a strict mode code 
        private bar(eval:any) {
                    ~~~~
!!! error TS1210: Invalid use of 'eval' because class definition is considered a strict mode code 
            arguments = "hello";
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
            ~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'IArguments'.
!!! error TS2322:   Property 'callee' is missing in type 'String'.
        }
    }